@@ -46,6 +46,9 @@ Underreporting Fixes
 Bug Fixes
 ---------
 
+* FLAG_NO_STOPLIST and FLAG_NO_ALERTLIST in feature_recorder.h were the same. They are now different.
+* FLAG_NO_QUOTE and FLAG_XML in feature_recorder.h were the same . They are different now.
+
 Usability Improvement
 ----------------------
 
